# vanilla_bo_in_highdim

./: .gitignore  README.md  main.py
BenchSuite/: pyproject.toml
configs/: conf.yaml
scripts/: cpu_parallel.sh
